--- a/generator/gemini_generator.ipynb
+++ b/generator/gemini_generator.ipynb
@@ -2,6 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "546f0a83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google import genai\n",
+    "from google.genai import types\n",
+    "import os, dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "438efd07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dotenv.load_dotenv(\"../.env\")\n",
+    "gemini_key = os.getenv(\"GEMINI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "22068f9a",
    "metadata": {},
@@ -11,23 +34,18 @@
     "\n",
     "def generate_answer(input_querry, context):\n",
     "    prompt = f\"\"\"\n",
-    "    Bạn là trợ lý phân loại câu hỏi học thuật. Hãy xác định câu hỏi sau thuộc môn nào.\n",
-    "\n",
-    "    **Hướng dẫn phân loại:**\n",
-    "    * **Lịch Sử Đảng**: Nếu câu hỏi liên quan đến lịch sử hình thành, các sự kiện quan trọng, các giai đoạn phát triển, các lãnh đạo, chủ trương, đường lối của Đảng Cộng sản Việt Nam.\n",
-    "        * **Ví dụ**: \"Chiến dịch Điện Biên Phủ diễn ra vào thời gian nào?\", \"Nghị quyết Trung ương 4 khóa XII nói về vấn đề gì?\"\n",
-    "    * **Triết Học Mác-Lênin**: Nếu câu hỏi liên quan đến các khái niệm, nguyên lý, quy luật của chủ nghĩa duy vật biện chứng, chủ nghĩa duy vật lịch sử, học thuyết giá trị thặng dư, và tư tưởng của Karl Marx, Friedrich Engels, Vladimir Lenin.\n",
-    "        * **Ví dụ**: \"Mâu thuẫn là gì trong triết học biện chứng?\", \"Học thuyết hình thái kinh tế xã hội được hiểu như thế nào?\"\n",
-    "\n",
-    "    **Câu hỏi cần phân loại:** \"{input_querry}\"\n",
-    "\n",
-    "    **Chỉ trả lời bằng một trong ba từ sau:**\n",
-    "    * `triet-hoc`\n",
-    "    * `lich-su-dang`\n",
-    "    * `unknown` (Nếu không xác định được câu hỏi thuộc môn nào trong hai môn trên)\n",
+    "    Mày là một chuyên gia trong việc trả lời các môn học đại cương về chính trị bậc đại học không chính quy.\n",
+    "    \n",
+    "    Dưới đây chính là query của người dùng về các câu hỏi liên quan tới các môn chính trị. \n",
+    "    {input_querry}\n",
+    "    \n",
+    "    Còn dưới đây là những context được cung cấp đên mày để trả lời câu hỏi của người dùng.\n",
+    "    {context}\n",
+    "    \n",
+    "    Dựa vào nhưng thông tin trên, mày hãy thực hiện trả lời câu hỏi của người dùng. Chỉ trả lời theo nội dung context cung cấp. Nếu những nội dung đó không liên quan đến câu hỏi thì trả lời \"Context không liên quan\".\n",
     "    \"\"\"\n",
     "\n",
-    "    client = genai.Client(api_key=GEMINI_API_KEY)\n",
+    "    client = genai.Client(api_key=gemini_key)\n",
     "    response = client.models.generate_content(\n",
     "        model=\"gemini-2.5-flash\",\n",
     "        contents=prompt,\n",
@@ -39,7 +57,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -53,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
